--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm run build && node index"
+    "dev": "npm run build && node index",
+    "build": "netlify-lambda build express",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
