instaled netlify lambda for tests

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run build",
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "netlify-lambda install"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.0",
+    "netlify-lambda": "^2.0.15",
     "sequelize": "^6.6.5",
     "slugify": "^1.6.0"
   }
